rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_method.rns

.method public static main ([Ljava/lang/String;)V
.class public HelloWorld
.super java/lang/Object
